compose works; nginx -g "daemon off;"

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -3,12 +3,14 @@ version: '3.8'
 
 services:
   web:
-    build: ./services/web
-    command: python manage.py run -h 0.0.0.0
-    volumes:
-      - ./services/web/:/usr/src/app/
+    image: nginx:test
+    container_name: srcs_nginx
+    # build: ./requirements/nginx/
+    command: nginx -g "daemon off;"
+    # volumes:
+    #   - ./services/web/:/usr/src/app/
     ports:
-      - 5000:5000
+      - 443:443
     env_file:
-      - ./.env.dev
+      - ./.env
 
