--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -15,7 +15,7 @@ http {
         # Now we enable it:
         ssl_protocols TLSv1.2 TLSv1.3;
         # TLS/SSL self-signed public certificate distributed to clients
-        ssl_certificate /etc/ssl/certs/k-stz.42.fr.crt;
+        ssl_certificate /etc/ssl/certs/k-stz.de.crt;
         # TLS/SSL private key used for encryption
         ssl_certificate_key /etc/ssl/private/nginx-private.key;
 
