nginx logs to stdout/err for docker logging

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -31,6 +31,13 @@ EXPOSE 443/TCP
 
 RUN mkdir -p /app/www && echo "Hello World!" > /app/www/index.html
 
+# From the offical nginx image: creates a symbolic link from the nginx log files to the 
+# stdout and stderr device. This in effect writes all logs to the foreground. This allows
+# "docker logs <container>" to read these logs, instead of having to attach to the running
+# container!
+RUN ln -sf /dev/stdout /var/log/nginx/access.log \
+	&& ln -sf /dev/stderr /var/log/nginx/error.log
+
 # Starts nginx in foreground. If on container startup there is no process 
 # in the foreground it immediately exits
 CMD ["nginx", "-g", "daemon off;"]
