--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -21,7 +21,7 @@ http {
 
         # Tell the server where to find the raw files
         location / {
-            root /app/www;
+            root /var/www/html/index.html;
         }     
     }
 }
