--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -9,6 +9,7 @@ events {}
 http {
     # This area is called the context of the directive
     server {
+        server_name k-stz.de;
         listen 443 ssl;
         access_log /var/log/nginx/access.log;
         # We can use TLSv1.3 because we use OpenSSL 1.1.1+ and nginx 1.13+
@@ -21,7 +22,17 @@ http {
 
         # Tell the server where to find the raw files
         location / {
-            root /var/www/html/index.html;
-        }     
+            root /var/www/html/index.php;
+        }
+        
+        # pass the PHP scripts to FastCGI server listening on wordpress:9000
+        location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass wordpress:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+        }
     }
 }
