--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -409,5 +409,7 @@ RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli
 	chmod +x wp-cli.phar; \
 	mv ./wp-cli.phar /usr/local/bin/wp;
 
+COPY object-cache.php /tmp
+
 ENTRYPOINT ["docker-entrypoint.sh"]
 CMD ["php-fpm"]
