add own redis container

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -50,7 +50,9 @@ services:
       - 443
 
   redis:
-    image: redis:alpine
+    #image: redis:alpine
+    build: ./requirements/redis/
+    command: redis-server --protected-mode no
     depends_on: 
       - wordpress
     ports:
