--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -55,5 +55,34 @@ http {
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param SCRIPT_NAME $fastcgi_script_name;
         }
+
+        ###
+
+
     }
+
+    # doesn't work
+    # server {
+    #     server_name k-stz.de;
+    #     listen 7000;
+    #     access_log /var/log/nginx/access.log;
+    #     error_log /var/log/nginx/error.log;
+
+    #     index index.php index.html;
+
+    #     location /adminer {
+    #         root /usr/share/adminer/;
+    #         index index.php;
+    #         location ~ \.php {
+    #             try_files $uri =404;
+    #             root /usr/share/adminer/;
+    #             include /etc/nginx/fastcgi_params;
+    #             # fastcgi_pass unix:/var/run/php/php7.3-fpm.sock;
+    #             fastcgi_pass adminer:8000;
+    #             fastcgi_param  HTTPS on;
+    #             fastcgi_index index.php;
+    #             fastcgi_param SCRIPT_FILENAME $request_filename;
+    #         }
+    #     }
+    # }
 }
