--- a/srcs/requirements/adminer/nginx.conf
+++ b/srcs/requirements/adminer/nginx.conf
@@ -12,8 +12,13 @@ http {
 	error_log /var/log/nginx/error.log;
 
     server {
-        listen 8000 default_server;
+        listen 8000 ssl;
         listen [::]:8000 default_server;
+
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_certificate /etc/ssl/certs/k-stz.de.crt;
+        ssl_certificate_key /etc/ssl/private/nginx-private.key;
 
         root /var/www/html/adminer;
 
