ADD nginx container works with adminer!

--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -61,28 +61,34 @@ http {
 
     }
 
-    # doesn't work
-    # server {
-    #     server_name k-stz.de;
-    #     listen 7000;
-    #     access_log /var/log/nginx/access.log;
-    #     error_log /var/log/nginx/error.log;
+    # doesn't work yet
+    server {
+        server_name k-stz.de;
+        listen 7000 ssl;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_certificate /etc/ssl/certs/k-stz.de.crt;
+        ssl_certificate_key /etc/ssl/private/nginx-private.key;
+        # access_log /var/log/nginx/scripts.log scripts;
+        error_log /var/log/nginx/error.log;
 
-    #     index index.php index.html;
+        # ROOT IS THE PATH ON THE TARGET SERVER = ADMINER:6000!!!! 
+        # WE MOUNT THE ADMINER DATA IN /var/www/adminer BUT THE REQUEST TO PHP-FPM
+        # WILL LOOK FOR IT IN @adminer:6000:<root>, so @adminer:6000:/usr/share/adminer
+        root /usr/share/adminer/adminer;
+        index index index.php index.html index.htm index.nginx-debian.html;
 
-    #     location /adminer {
-    #         root /usr/share/adminer/;
-    #         index index.php;
-    #         location ~ \.php {
-    #             try_files $uri =404;
-    #             root /usr/share/adminer/;
-    #             include /etc/nginx/fastcgi_params;
-    #             # fastcgi_pass unix:/var/run/php/php7.3-fpm.sock;
-    #             fastcgi_pass adminer:8000;
-    #             fastcgi_param  HTTPS on;
-    #             fastcgi_index index.php;
-    #             fastcgi_param SCRIPT_FILENAME $request_filename;
-    #         }
-    #     }
-    # }
+        location / {
+            try_files $uri /index.php?$args;
+        }
+        location ~* \.php$ {
+            #try_files $uri =404;
+            include fastcgi_params;
+            # fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            fastcgi_pass adminer:6000;
+            fastcgi_param  HTTPS on;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            # fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+        }
+    }
 }
