--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -40,9 +40,10 @@ services:
     #command: nginx -g "daemon off;"
     volumes:
       - html:/var/www/html
+    #  - adminer:/var/www/adminer
     ports:
       - 443:443
-      # - 7000:7000 # adminer, doesn't work
+      - 7000:7000 # adminer, doesn't work
     env_file:
       - ./.env
     restart: unless-stopped
@@ -50,6 +51,16 @@ services:
       - mynetwork
     expose:
       - 443
+      - 7000
+  adminer:
+    # image: adminer:4.8.1
+    build: ./requirements/adminer
+    restart: unless-stopped
+    # command: /usr/sbin/php-fpm7.3 -F -R
+    expose: 
+      - 6000
+    networks:
+      - mynetwork
 
   redis:
     build: ./requirements/redis/
@@ -67,16 +78,6 @@ services:
       - 5000:5000
     restart: unless-stopped
 
-  adminer:
-    # image: adminer:4.8.1
-    build: ./requirements/adminer
-    restart: unless-stopped
-    # command: /usr/sbin/php-fpm7.3 -F -R
-    ports: 
-      - 8000:8000
-    networks:
-      - mynetwork
-
 networks:
   # The default driver depends on how the Docker Engine you’re using is configured, but in most instances it is bridge on a single host and overlay on a Swarm.
   mynetwork:
@@ -92,4 +93,9 @@ volumes:
     driver_opts:
       type: none
       device: /home/k-stz/data/html #NOTE needs full path (~ doesn't work)
+      o: bind
+  adminer:
+    driver_opts:
+      type: none
+      device: /home/k-stz/data/adminer #NOTE needs full path (~ doesn't work)
       o: bind
