--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -41,6 +41,11 @@ RUN mkdir -p /app/www && echo "Hello World!" > /app/www/index.html
 RUN ln -sf /dev/stdout /var/log/nginx/access.log \
 	&& ln -sf /dev/stderr /var/log/nginx/error.log
 
+RUN mkdir -p /var/www/adminer; chown root:root /var/www/adminer;
+
+# maybe now i dont need the mkdir -p ... above?
+VOLUME /var/www/html
+
 # Starts nginx in foreground. If on container startup there is no process 
 # in the foreground it immediately exits
 CMD ["nginx", "-g", "daemon off;"]
