--- a/srcs/requirements/ftp/vsftpd.conf
+++ b/srcs/requirements/ftp/vsftpd.conf
@@ -1,3 +1,5 @@
+local_root=/var/www/html
+secure_chroot_dir=/var/www/html
 # daemon
 background=NO
 listen_ipv6=NO
@@ -5,7 +7,7 @@ listen=YES
 session_support=NO
 
 # access
-anonymous_enable=NO
+anonymous_enable=YES
 local_enable=YES
 ftpd_banner=FTP Server
 
@@ -27,8 +29,9 @@ write_enable=YES
 max_clients=0
 max_per_ip=0
 pasv_enable=YES
-pasv_address=0.0.0.0
-pasv_max_port=40009
+# withouth the next option set to localhost it doesn't work with containers...
+pasv_address=127.0.0.1 
+pasv_max_port=40001
 pasv_min_port=40000
 port_enable=YES
 ftp_data_port=20
